# School-project-huffman

./: .gitignore  README.md
python/: app.py  bit_grouper.py  defs.py  encoding.py  eof_encoding.py  freqtable.py  huffman.py  huffman_util.py  tree.py  unpack.py  util.py
src/huffman/: huffman.sln
src/huffman/huffman/: CMakeLists.txt  app.cpp  huffman.vcxproj  huffman.vcxproj.filters  logging.cpp  util.h
src/huffman/huffman/data/: binary-tree.h  frequency-table.h
src/huffman/huffman/encoding/: bit-grouper.cpp  bit-grouper.h  encoding-combiner.h  encoding.h  eof-encoding.cpp  eof-encoding.h
src/huffman/huffman/encoding/huffman/: huffman-encoding.cpp  huffman-encoding.h  tree-encoding.cpp  tree-encoding.h
src/huffman/huffman/io/: binary-io.cpp  binary-io.h  data-endpoints.h  files.cpp  files.h  memory-buffer.h  streams.h
src/huffman/huffman/tests/: Main_Test.cpp  binary-io_test.cpp  binary-tree_test.cpp  bit-grouper_test.cpp  encoding-combiner_test.cpp  eof_encoding_test.cpp  example-tests.cpp  frequency-table_tests.cpp  huffman-tests.cpp  memory-buffer_test.cpp  testfunctions.h  tests.cpp  type-selection-tests.cpp
